fix(pdc-frontend): fix text wrapping issue of OpenFormsEmbed combobox

--- a/apps/pdc-frontend/src/components/OpenFormsEmbed/OpenFormsEmbed.scss
+++ b/apps/pdc-frontend/src/components/OpenFormsEmbed/OpenFormsEmbed.scss
@@ -43,6 +43,7 @@
 .utrecht-form-field.utrecht-form-field--select .selection + .choices__list .choices__item {
   block-size: fit-content !important;
   text-wrap: wrap;
+  word-break: break-word;
 }
 /* stylelint-enable selector-class-pattern */
 
